--- a/index.html
+++ b/index.html
@@ -3,9 +3,35 @@
 <html lang="en">
 <head>
     <meta charset="utf-8" />
-    <title>Personal Website</title>
+    <title>Dalton Newport</title>
 </head>
 <body>
+
+    <nav class="navbar navbar-inverse">
+        <div class="container-fluid">
+            <div class="navbar-header">
+                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                </button>
+                <a class="navbar-brand" href="#">Dalton Newport</a>
+            </div>
+            <div class="collapse navbar-collapse" id="myNavbar">
+                <ul class="nav navbar-nav">
+                    <li class="active"><a href="#">Home</a></li>
+                    <li><a href="about">About</a></li>
+                    <li><a href="project">Project</a></li>
+                    <li><a href="skills">Skills</a></li>
+                </ul>
+            </div>
+        </div>
+    </nav>
+
+    <div class="jumbotron text-center" style="margin-bottom:0">
+        <h1>Dalton Newport</h1>
+        <p>MIS and Accounting Student at the University of Oklahoma</p>
+    </div>
 
 </body>
 </html>
