--- a/index.html
+++ b/index.html
@@ -4,9 +4,25 @@
 <head>
     <meta charset="utf-8" />
     <title>Dalton Newport</title>
+
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.6.3/css/font-awesome.min.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
+    <style>
+        .fakeimg {
+            height: 200px;
+            background: #aaa;
+        }
+    </style>
 </head>
 <body>
 
+    <div class="jumbotron text-center" style="margin-bottom:0">
+        <h1>Dalton Newport</h1>
+        <p>MIS and Accounting Student at the University of Oklahoma</p>
+    </div>
     <nav class="navbar navbar-inverse">
         <div class="container-fluid">
             <div class="navbar-header">
@@ -28,10 +44,29 @@
         </div>
     </nav>
 
-    <div class="jumbotron text-center" style="margin-bottom:0">
-        <h1>Dalton Newport</h1>
-        <p>MIS and Accounting Student at the University of Oklahoma</p>
+    <div class="container">
+        <div class="row">
+            <div class="col-sm-4">
+                <h2>About Me</h2>
+                <img style="width: 100%" src="assets\img\mainPic.png"></img>
+                <p>
+                    I am in my senior year as a Managment Information Systems and Accounting major at the University of Oklahoma.
+                </p>
+                <h3>Contact Me</h3>
+                <a style="font-size: 2em" href="mailto:dalton.e.newport-1@ou.edu">Dalton.e.newport-1@ou.edu</a>
+                <br>
+                <a style="font-size: 2em" href="https://github.com/DaltonNewport975"> GitHub <i class="fa fa-github"></i></a>
+                <h3>Other Links</h3>
+                <a style="font-size: 1em" href="assets\DaltonNewportResume.pdf">Resume</a>
+                <br>
+                <a style="font-size: 1em" href="http://www.ou.edu/scr/">Sooner Competitive Robotics</a>
+            </div>
+        </div>
     </div>
 
+    <!-- Funky little jumbotron to lengthen the bottom of the page because I think it looks more professional-->
+    <div class="jumbotron text-center" style="margin-bottom:0">
+        <p></p>
+    </div>
 </body>
 </html>
