--- a/about/index.html
+++ b/about/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html> <!--About Page-->
 
 <html lang="en">
 <head>
@@ -19,5 +19,36 @@
 </head>
 
 <body>
-    
+
+    <div class="jumbotron text-center" style="margin-bottom:0">
+        <h1>Dalton Newport</h1>
+        <p>MIS and Accounting Student at the University of Oklahoma</p>
+        <p>About Me</p>
+    </div>
+
+    <!-- I did the about page as a side bar because I like it better this way but will still add an about page that is just this-->
+    <div class="container">
+        <div class="row">
+            <div class="col-sm-4">
+                <h2>About Me</h2>
+                <img style="width: 100%" src="assets\DaltonUnprofessional.png">
+                <p>
+                    I am in my senior year as a Managment Information Systems and Accounting major at the University of Oklahoma. During my time at
+                    OU I have been serving as a mechanical lead for Sooner Competative Robotics. Here my duties have primarilly consisted of
+                    overseeing teams of mechanical engineers and working along side them to create robots to compete in competitions across
+                    the United States.
+                </p>
+                <h3>Contact Me</h3>
+                <a style="font-size: 2em" href="mailto:dalton.e.newport-1@ou.edu">Dalton.e.newport-1@ou.edu</a>
+                <br>
+                <a style="font-size: 2em" href="https://github.com/DaltonNewport975"> GitHub <i class="fa fa-github"></i></a>
+                <h3>Other Links</h3>
+                <a style="font-size: 1em" href="assets\DaltonNewportResume.pdf">Resume</a>
+                <br>
+                <a style="font-size: 1em" href="http://www.ou.edu/scr/">Sooner Competitive Robotics</a>
+            </div>
+        </div>
+    </div>
+
 </body>
+</html>
