--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-﻿<!DOCTYPE html>
+﻿<!DOCTYPE html> <!--Home Page-->
 
 <html lang="en">
 <head>
@@ -37,20 +37,24 @@
                 <ul class="nav navbar-nav">
                     <li class="active"><a href="#">Home</a></li>
                     <li><a href="about">About</a></li>
-                    <li><a href="project">Project</a></li>
+                    <li><a href="projects">Projects</a></li>
                     <li><a href="skills">Skills</a></li>
                 </ul>
             </div>
         </div>
     </nav>
 
+    <!-- I did the about page as a side bar because I like it better this way but will still add an about page that is just this-->
     <div class="container">
         <div class="row">
             <div class="col-sm-4">
                 <h2>About Me</h2>
-                <img style="width: 100%" src="assets\img\mainPic.png"></img>
+                <img style="width: 100%" src="assets\DaltonUnprofessional.png">
                 <p>
-                    I am in my senior year as a Managment Information Systems and Accounting major at the University of Oklahoma.
+                    I am in my senior year as a Managment Information Systems and Accounting major at the University of Oklahoma. During my time at 
+                    OU I have been serving as a mechanical lead for Sooner Competative Robotics. Here my duties have primarilly consisted of 
+                    overseeing teams of mechanical engineers and working along side them to create robots to compete in competitions across
+                    the United States.
                 </p>
                 <h3>Contact Me</h3>
                 <a style="font-size: 2em" href="mailto:dalton.e.newport-1@ou.edu">Dalton.e.newport-1@ou.edu</a>
