--- a/projects/index.html
+++ b/projects/index.html
@@ -25,6 +25,26 @@
         <p>MIS and Accounting Student at the University of Oklahoma</p>
         <p>My Projects</p>
     </div>
+    <nav class="navbar navbar-inverse">
+        <div class="container-fluid">
+            <div class="navbar-header">
+                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                </button>
+                <a class="navbar-brand" href="#">Dalton Newport</a>
+            </div>
+            <div class="collapse navbar-collapse" id="myNavbar">
+                <ul class="nav navbar-nav">
+                    <li class="active"><a href="#">Home</a></li>
+                    <li><a href="about">About</a></li>
+                    <li><a href="projects">Projects</a></li>
+                    <li><a href="skills">Skills</a></li>
+                </ul>
+            </div>
+        </div>
+    </nav>
 
     <!-- I did the about page as a side bar because I like it better this way but will still add an about page that is just this-->
     <div class="container">
