Updated all files
Put content onto the projects and skills pages. Reformatted others

--- a/projects/index.html
+++ b/projects/index.html
@@ -23,7 +23,6 @@
     <div class="jumbotron text-center" style="margin-bottom:0">
         <h1>Dalton Newport</h1>
         <p>MIS and Accounting Student at the University of Oklahoma</p>
-        <p>My Projects</p>
     </div>
     <nav class="navbar navbar-inverse">
         <div class="container-fluid">
@@ -37,9 +36,9 @@
             </div>
             <div class="collapse navbar-collapse" id="myNavbar">
                 <ul class="nav navbar-nav">
-                    <li class="active"><a href="#">Home</a></li>
+                    <li><a href="#">Home</a></li>
                     <li><a href="about">About</a></li>
-                    <li><a href="projects">Projects</a></li>
+                    <li class="active"><a href="projects">Projects</a></li>
                     <li><a href="skills">Skills</a></li>
                 </ul>
             </div>
@@ -51,7 +50,7 @@
         <div class="row">
             <div class="col-sm-4">
                 <h2>About Me</h2>
-                <img style="width: 100%" src="assets\DaltonUnprofessional.png">
+                <img style="width: 100%" src="DaltonNewport975.github.io\assets\DaltonUnprofessional.png">
                 <p>
                     I am in my senior year as a Managment Information Systems and Accounting major at the University of Oklahoma. During my time at
                     OU I have been serving as a mechanical lead for Sooner Competative Robotics. Here my duties have primarilly consisted of
@@ -67,8 +66,40 @@
                 <br>
                 <a style="font-size: 1em" href="http://www.ou.edu/scr/">Sooner Competitive Robotics</a>
             </div>
+
+            <div class="col-sm-8">
+                <h2>Projects</h2>
+                <h3>MIS 3303 Classwork</h3>
+                <p>
+                    During the Fall of 2019, I completed an MIS course focused on furthering my understanding of programming and web development. This class involved programming based projects scaling from simple 2 or 3 hour assignments
+                    to a much larger multi-week group project. My final project involved the creation of a program designed to allow a professor to quickly generate homwork assignments based on a list of previously input questions
+                    and answers.
+                </p>
+                <br>
+
+                <h3>Database Construction Project</h3>
+                <p>
+                    In the Spring of 2019, I completed a systems and databases course at The University of Oklahoma. The class was focused on one project that took place over the entire semester wherein we designed, implemented, and
+                    revised a database to meet a fabricated customer's needs. For the project we utilized Lucidchart for flowcharting and Microsoft SQL Server Management Studio for the actual database.
+                </p>
+                <br>
+
+                <h3>Ongoing Personal Project</h3>
+                <p>
+                    Throughout my life I have always enjoyed role playing games such as Dungeons & Dragons, but have always found character creation tedious. To remedy this problem, in the Spring of 2019, I began work on a WPF application
+                    that could fully generate a Dungons & Dragons 5th edition character complete with rolled stats, a complete backstory, and fully selected inventory. This project is ongoing but can be found in my Github repository
+                    dedicated to Dungons & Dragons related projects.
+
+                    <a style="font-size: 1em" href="https://github.com/DaltonNewport975/DnD-Stuff">My GitHub Repository</a>
+                </p>
+                <br>
+            </div>
         </div>
     </div>
 
+    <!-- Funky little jumbotron to lengthen the bottom of the page because I think it looks more professional-->
+    <div class="jumbotron text-center" style="margin-bottom:0">
+        <p></p>
+    </div>
 </body>
 </html>
