--- a/skills/index.html
+++ b/skills/index.html
@@ -23,7 +23,6 @@
     <div class="jumbotron text-center" style="margin-bottom:0">
         <h1>Dalton Newport</h1>
         <p>MIS and Accounting Student at the University of Oklahoma</p>
-        <p>My Skills</p>
     </div>
     <nav class="navbar navbar-inverse">
         <div class="container-fluid">
@@ -37,10 +36,10 @@
             </div>
             <div class="collapse navbar-collapse" id="myNavbar">
                 <ul class="nav navbar-nav">
-                    <li class="active"><a href="#">Home</a></li>
+                    <li><a href="#">Home</a></li>
                     <li><a href="about">About</a></li>
                     <li><a href="projects">Projects</a></li>
-                    <li><a href="skills">Skills</a></li>
+                    <li class="active"><a href="skills">Skills</a></li>
                 </ul>
             </div>
         </div>
@@ -51,7 +50,7 @@
         <div class="row">
             <div class="col-sm-4">
                 <h2>About Me</h2>
-                <img style="width: 100%" src="assets\DaltonUnprofessional.png">
+                <img style="width: 100%" src="DaltonNewport975.github.io\assets\DaltonUnprofessional.png">
                 <p>
                     I am in my senior year as a Managment Information Systems and Accounting major at the University of Oklahoma. During my time at
                     OU I have been serving as a mechanical lead for Sooner Competative Robotics. Here my duties have primarilly consisted of
@@ -67,8 +66,26 @@
                 <br>
                 <a style="font-size: 1em" href="http://www.ou.edu/scr/">Sooner Competitive Robotics</a>
             </div>
+
+            <div class="col-sm-8">
+                <h3>My Skills</h3>
+            </div>
+               
+                    <li>C#                                         </li>
+                    <li>Java                                       </li>
+                    <li>Visual Basic                               </li>
+                    <li>Microsoft Office Programs                  </li>
+                    <li>Autodesk Inventor                          </li>
+                    <li>Solid Works                                </li>
+                    <li>SMAW, GMAW, FCAW, and TIG Welding Processes</li>
+                    <li>Forklift Operations                        </li>
+                    <li>Overhead Bridge Crane Operations           </li>
         </div>
     </div>
 
+    <!-- Funky little jumbotron to lengthen the bottom of the page because I think it looks more professional-->
+    <div class="jumbotron text-center" style="margin-bottom:0">
+        <p></p>
+    </div>
 </body>
 </html>
