--- a/about/index.html
+++ b/about/index.html
@@ -23,7 +23,6 @@
     <div class="jumbotron text-center" style="margin-bottom:0">
         <h1>Dalton Newport</h1>
         <p>MIS and Accounting Student at the University of Oklahoma</p>
-        <p>About Me</p>
     </div>
     <nav class="navbar navbar-inverse">
         <div class="container-fluid">
@@ -37,8 +36,8 @@
             </div>
             <div class="collapse navbar-collapse" id="myNavbar">
                 <ul class="nav navbar-nav">
-                    <li class="active"><a href="#">Home</a></li>
-                    <li><a href="about">About</a></li>
+                    <li><a href="#">Home</a></li>
+                    <li class="active"><a href="about">About</a></li>
                     <li><a href="projects">Projects</a></li>
                     <li><a href="skills">Skills</a></li>
                 </ul>
@@ -51,7 +50,7 @@
         <div class="row">
             <div class="col-sm-4">
                 <h2>About Me</h2>
-                <img style="width: 100%" src="assets\DaltonUnprofessional.png">
+                <img style="width: 100%" src="DaltonNewport975.github.io\assets\DaltonUnprofessional.png">
                 <p>
                     I am in my senior year as a Managment Information Systems and Accounting major at the University of Oklahoma. During my time at
                     OU I have been serving as a mechanical lead for Sooner Competative Robotics. Here my duties have primarilly consisted of
@@ -67,8 +66,15 @@
                 <br>
                 <a style="font-size: 1em" href="http://www.ou.edu/scr/">Sooner Competitive Robotics</a>
             </div>
+            <div class="col-sm-8">
+
+            </div>
         </div>
     </div>
 
+    <!-- Funky little jumbotron to lengthen the bottom of the page because I think it looks more professional-->
+    <div class="jumbotron text-center" style="margin-bottom:0">
+        <p></p>
+    </div>
 </body>
 </html>
