--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
         <div class="row">
             <div class="col-sm-4">
                 <h2>About Me</h2>
-                <img style="width: 100%" src="assets\DaltonUnprofessional.png">
+                <img style="width: 100%" src="DaltonNewport975\assets\DaltonUnprofessional.png">
                 <p>
                     I am in my senior year as a Managment Information Systems and Accounting major at the University of Oklahoma. During my time at 
                     OU I have been serving as a mechanical lead for Sooner Competative Robotics. Here my duties have primarilly consisted of 
