--- a/about/index.html
+++ b/about/index.html
@@ -36,10 +36,10 @@
             </div>
             <div class="collapse navbar-collapse" id="myNavbar">
                 <ul class="nav navbar-nav">
-                    <li><a href="DaltonNewport975.github.io/home">Home</a></li>
+                    <li><a href="DaltonNewport975.github.io/">Home</a></li>
                     <li class="active"><a href="#">About</a></li>
-                    <li><a href="DaltonNewport975.github.io/projects">Projects</a></li>
-                    <li><a href="DaltonNewport975.github.io/skills">Skills</a></li>
+                    <li><a href="DaltonNewport975.github.io/projects/">Projects</a></li>
+                    <li><a href="DaltonNewport975.github.io/skills/">Skills</a></li>
                 </ul>
             </div>
         </div>
