--- a/index.html
+++ b/index.html
@@ -36,9 +36,9 @@
             <div class="collapse navbar-collapse" id="myNavbar">
                 <ul class="nav navbar-nav">
                     <li class="active"><a href="#">Home</a></li>
-                    <li><a href="DaltonNewport975.github.io/about">About</a></li>
-                    <li><a href="DaltonNewport975.github.io/projects">Projects</a></li>
-                    <li><a href="DaltonNewport975.github.io/skills">Skills</a></li>
+                    <li><a href="DaltonNewport975.github.io/about/">About</a></li>
+                    <li><a href="DaltonNewport975.github.io/projects/">Projects</a></li>
+                    <li><a href="DaltonNewport975.github.io/skills/">Skills</a></li>
                 </ul>
             </div>
         </div>
