--- a/skills/index.html
+++ b/skills/index.html
@@ -36,9 +36,9 @@
             </div>
             <div class="collapse navbar-collapse" id="myNavbar">
                 <ul class="nav navbar-nav">
-                    <li><a href="DaltonNewport975.github.io/home">Home</a></li>
-                    <li><a href="DaltonNewport975.github.io/about">About</a></li>
-                    <li><a href="DaltonNewport975.github.io/projects">Projects</a></li>
+                    <li><a href="DaltonNewport975.github.io">Home</a></li>
+                    <li><a href="DaltonNewport975.github.io/about/">About</a></li>
+                    <li><a href="DaltonNewport975.github.io/projects/">Projects</a></li>
                     <li class="active"><a href="#">Skills</a></li>
                 </ul>
             </div>
