--- a/skills/index.html
+++ b/skills/index.html
@@ -36,10 +36,10 @@
             </div>
             <div class="collapse navbar-collapse" id="myNavbar">
                 <ul class="nav navbar-nav">
-                    <li><a href="DaltonNewport975.github.io">Home</a></li>
-                    <li><a href="DaltonNewport975.github.io/about/">About</a></li>
-                    <li><a href="DaltonNewport975.github.io/projects/">Projects</a></li>
-                    <li class="active"><a href="#">Skills</a></li>
+                    <li><a href="https://DaltonNewport975.github.io">Home</a></li>
+                    <li><a href="https://DaltonNewport975.github.io/about">About</a></li>
+                    <li><a href="https://DaltonNewport975.github.io/projects">Projects</a></li>
+                    <li class="active"><a href="https://daltonnewport975.github.io/skills">Skills</a></li>
                 </ul>
             </div>
         </div>
