Updated all files
Added more to the home page and fixed formatting

--- a/about/index.html
+++ b/about/index.html
@@ -48,9 +48,9 @@
     <!-- I did the about page as a side bar because I like it better this way but will still add an about page that is just this-->
     <div class="container">
         <div class="row">
-            <div class="col-sm-4">
+            <div>
                 <h2>About Me</h2>
-                <img style="width: 100%" src="DaltonNewport975.github.io\assets\DaltonUnprofessional.png">
+                <img style="width: 100%" src="https://DaltonNewport975.github.io/assets/DaltonUnprofessional.png">
                 <p>
                     I am in my senior year as a Managment Information Systems and Accounting major at the University of Oklahoma. During my time at
                     OU I have been serving as a mechanical lead for Sooner Competative Robotics. Here my duties have primarilly consisted of
