--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
         <div class="row">
             <div class="col-sm-4">
                 <h2>About Me</h2>
-                <img style="width: 100%" src="DaltonNewport975\assets\DaltonUnprofessional.png">
+                <img style="width: 100%" src="https://DaltonNewport975.github.io/assets/DaltonUnprofessional.png">
                 <p>
                     I am in my senior year as a Managment Information Systems and Accounting major at the University of Oklahoma. During my time at 
                     OU I have been serving as a mechanical lead for Sooner Competative Robotics. Here my duties have primarilly consisted of 
@@ -65,6 +65,30 @@
                 <br>
                 <a style="font-size: 1em" href="http://www.ou.edu/scr/">Sooner Competitive Robotics</a>
             </div>
+            <div class="col-sm-8">
+                <h3>Site Purpose</h3>
+                <p>
+                    This Website serves both to get me a good grade in my programming course and show off my web development skills to potential employers
+                </p>
+
+                <h3>Involvement</h3>
+                <h4>Sooner Competative Robotics</h4>
+                <div class="container">
+                    <div class="row">
+                            <div class="col-sm-4">
+                                <img style="width: 100%" src="https://DaltonNewport975.github.io/assets/behemoth.jpg" />
+                            </div>
+                            <div class="col-sm-4">
+                                <img style="width: 100%" src"https://DaltonNewport975.github.io/assets/welding.jpg" />
+                            </div>
+                    </div>
+                </div>
+                <p>
+                I have been in SCR my entire college career. For four consecutive years I have served as a mechanical lead in various teams. Ive designed and built robots
+                that have weighed a mere 3 kilograms and just drove around, and ive constructed hundred and fifty pound behemoths designed to map out parks.
+                </p>
+            </div>
+
         </div>
     </div>
 
